--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
 body{
     background-color: var(--backcolor);
     margin: 0;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #future-block{
@@ -114,10 +116,9 @@ body{
 }
 
 #author{
-    width: 100vw;
+    width: 90vw;
     text-align: center;
 
-    position: absolute;
-    bottom: 10px;
-
+    position: relative;
+    margin-top: 30px;
 }
