--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body{
     border-radius: 3px;
 
     text-align: center;
-    line-height: 16vw;
+    line-height: 67px;
     font-size: 30px;
     font-weight: bolder;
     color: var(--fontcolor);
